Build: Renable dual-cpu multiple PSA client call feature
The flag to control multiple PSA client call feature doesn't take
effect on dual-cpu platforms in the new build system.
Re-configure it to enable this feature enabled on dual-cpu
platforms.

Change-Id: I3df464c29bec603678b2f05675be141e77dd7fb2
Signed-off-by: David Hu <david.hu@arm.com>

--- a/interface/CMakeLists.txt
+++ b/interface/CMakeLists.txt
@@ -46,6 +46,7 @@ target_compile_definitions(psa_interface
         $<$<BOOL:${TFM_ISOLATION_LEVEL}>:TFM_LVL=${TFM_ISOLATION_LEVEL}>
         $<$<VERSION_GREATER:${TFM_ISOLATION_LEVEL},1>:CONFIG_TFM_ENABLE_MEMORY_PROTECT>
         $<$<BOOL:${TFM_MULTI_CORE_TOPOLOGY}>:TFM_MULTI_CORE_TOPOLOGY>
+        $<$<BOOL:${TFM_MULTI_CORE_MULTI_CLIENT_CALL}>:TFM_MULTI_CORE_MULTI_CLIENT_CALL>
 )
 
 ###################### PSA api (S lib) #########################################
