--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -92,6 +92,7 @@ target_compile_definitions(platform_ns
     PRIVATE
         $<$<BOOL:${TFM_IRQ_TEST}>:TFM_ENABLE_IRQ_TEST>
         $<$<BOOL:${TFM_PERIPH_ACCESS_TEST}>:TFM_ENABLE_PERIPH_ACCESS_TEST>
+        $<$<BOOL:${TFM_MULTI_CORE_MULTI_CLIENT_CALL}>:TFM_MULTI_CORE_MULTI_CLIENT_CALL>
 )
 
 #========================= Platform BL2 =======================================#
