Build: Add global array used as stacks
This patch adds global array as partition stacks. Global stack
arrays are generated automatically in the build process.

Using a global array as partition stack would wrap stack into
partition private data, which skips allocating specific space
by the linker. The related tools and templates are modified
together in this patch.

The 'psa_ff_test' related partitions also need new generated
intermedia files, before feedback this change to 'psa_ff_test',
put those test partitions intermedia files under build directory.

Change-Id: Ibcc79bdee0c3d4db7cd060bb92861ce3aa5e4437
Signed-off-by: Ken Liu <ken.liu@arm.com>
Co-authored-by: Mingyang Sun <mingyang.sun@arm.com>

--- a/secure_fw/partitions/crypto/CMakeLists.txt
+++ b/secure_fw/partitions/crypto/CMakeLists.txt
@@ -27,6 +27,13 @@ target_sources(tfm_partition_crypto
         crypto_key_derivation.c
 )
 
+# The generated sources
+target_sources(tfm_partition_crypto
+    PRIVATE
+        $<$<BOOL:${TFM_PSA_API}>:
+            ${CMAKE_BINARY_DIR}/generated/secure_fw/partitions/crypto/auto_generated/intermedia_tfm_crypto.c>
+)
+
 target_include_directories(tfm_partition_crypto
     PRIVATE
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
