Build: Use generated psa_manifest header files
The psa_manifest header files are generated into build directory
now. Remove psa_manifest header files existed in partition
directories and use the ones from the build directory.

Similar changes are also needed in tf-m-tests arch-test repo.

Change-Id: If4a69b49732752d6092a20912cb307fa991ba80c
Signed-off-by: Mingyang Sun <mingyang.sun@arm.com>

--- a/secure_fw/partitions/audit_logging/CMakeLists.txt
+++ b/secure_fw/partitions/audit_logging/CMakeLists.txt
@@ -27,10 +27,12 @@ target_sources(tfm_partition_audit
 target_include_directories(tfm_partition_audit
     PUBLIC
         .
+    PRIVATE
+        ${CMAKE_BINARY_DIR}/generated/secure_fw/partitions/audit_logging
 )
 
 target_link_libraries(tfm_partition_audit
-    PRIVATE 
+    PRIVATE
         platform_s
         tfm_secure_api
         psa_interface
