Build: Put generated header files to 'build' directory
In new build system, all auto-generated files are put to the build
directory. This patch modifies the tool script to generate and
output psa manifest header files to build directory.

Adds a "source_path" item in manifest file to enable the tool output
tf-m-tests and arch-test psa header files to build directory.

Change-Id: I6034007b300e4504454834a0ffe08b78421bba74
Signed-off-by: Mingyang Sun <mingyang.sun@arm.com>

--- a/tools/tfm_psa_ff_test_manifest_list.yaml.in
+++ b/tools/tfm_psa_ff_test_manifest_list.yaml.in
@@ -15,6 +15,7 @@
       "name": "PSA FF Test Client Partition",
       "short_name": "PSA_FF_TEST_CLIENT",
       "manifest": "@PSA_ARCH_TESTS_PATH@/api-tests/platform/manifests/client_partition_psa.json",
+      "source_path":"@PSA_ARCH_TESTS_PATH@",
       "tfm_partition_ipc": true,
       "conditional": "PSA_API_TEST_IPC",
       "version_major": 0,
@@ -30,6 +31,7 @@
       "name": "PSA FF Test Server Partition",
       "short_name": "PSA_FF_TEST_SERVER",
       "manifest": "@PSA_ARCH_TESTS_PATH@/api-tests/platform/manifests/server_partition_psa.json",
+      "source_path":"@PSA_ARCH_TESTS_PATH@",
       "tfm_partition_ipc": true,
       "conditional": "PSA_API_TEST_IPC",
       "version_major": 0,
@@ -45,6 +47,7 @@
       "name": "PSA FF Test Driver Partition",
       "short_name": "PSA_FF_TEST_DRIVER",
       "manifest": "@PSA_ARCH_TESTS_PATH@/api-tests/platform/manifests/driver_partition_psa.json",
+      "source_path":"@PSA_ARCH_TESTS_PATH@",
       "tfm_partition_ipc": true,
       "conditional": "PSA_API_TEST_IPC",
       "version_major": 0,
