--- a/tools/tfm_manifest_list.yaml.in
+++ b/tools/tfm_manifest_list.yaml.in
@@ -108,6 +108,7 @@
       "name": "TFM Core Test Service",
       "short_name": "TFM_SP_CORE_TEST",
       "manifest": "@TFM_TEST_PATH@/test_services/tfm_core_test/tfm_test_core.yaml",
+      "source_path": "@TFM_TEST_PATH@",
       "tfm_partition_ipc": true,
       "conditional": "TFM_PARTITION_TEST_CORE",
       "version_major": 0,
@@ -123,6 +124,7 @@
       "name": "TFM Core Test Service 2",
       "short_name": "TFM_SP_CORE_TEST_2",
       "manifest": "@TFM_TEST_PATH@/test_services/tfm_core_test_2/tfm_test_core_2.yaml",
+      "source_path": "@TFM_TEST_PATH@",
       "tfm_partition_ipc": true,
       "conditional": "TFM_PARTITION_TEST_CORE",
       "version_major": 0,
@@ -138,6 +140,7 @@
       "name": "TFM Secure Client Service",
       "short_name": "TFM_SP_SECURE_TEST_PARTITION",
       "manifest": "@TFM_TEST_PATH@/test_services/tfm_secure_client_service/tfm_test_client_service.yaml",
+      "source_path": "@TFM_TEST_PATH@",
       "tfm_partition_ipc": true,
       "conditional": "TFM_PARTITION_TEST_SECURE_SERVICES",
       "version_major": 0,
@@ -161,6 +164,7 @@
       "name": "TFM IPC Service Test",
       "short_name": "TFM_SP_IPC_SERVICE_TEST",
       "manifest": "@TFM_TEST_PATH@/test_services/tfm_ipc_service/tfm_ipc_service_partition.yaml",
+      "source_path": "@TFM_TEST_PATH@",
       "tfm_partition_ipc": true,
       "conditional": "TFM_PARTITION_TEST_CORE_IPC",
       "version_major": 0,
@@ -176,6 +180,7 @@
       "name": "TFM IPC Client Service",
       "short_name": "TFM_SP_IPC_CLIENT_TEST",
       "manifest": "@TFM_TEST_PATH@/test_services/tfm_ipc_client/tfm_ipc_client_partition.yaml",
+      "source_path": "@TFM_TEST_PATH@",
       "tfm_partition_ipc": true,
       "conditional": "TFM_PARTITION_TEST_CORE_IPC",
       "version_major": 0,
@@ -191,6 +196,7 @@
       "name": "TFM IRQ Test Service 1",
       "short_name": "TFM_IRQ_TEST_1",
       "manifest": "@TFM_TEST_PATH@/test_services/tfm_irq_test_service_1/tfm_irq_test_service_1.yaml",
+      "source_path": "@TFM_TEST_PATH@",
       "tfm_partition_ipc": true,
       "conditional": "TFM_ENABLE_IRQ_TEST",
       "version_major": 0,
@@ -207,6 +213,7 @@
       "name": "TF-M PS Test Service",
       "short_name": "TFM_SP_PS_TEST",
       "manifest": "@TFM_TEST_PATH@/test_services/tfm_ps_test_service/tfm_ps_test_service.yaml",
+      "source_path": "@TFM_TEST_PATH@",
       "tfm_partition_ipc": true,
       "conditional": "TFM_PARTITION_TEST_PS",
       "version_major": 0,
@@ -222,6 +229,7 @@
       "name": "TF-M Secure Client 2 Service",
       "short_name": "TFM_SP_SECURE_CLIENT_2",
       "manifest": "@TFM_TEST_PATH@/test_services/tfm_secure_client_2/tfm_secure_client_2.yaml",
+      "source_path": "@TFM_TEST_PATH@",
       "tfm_partition_ipc": true,
       "conditional": "TFM_PARTITION_TEST_SECURE_SERVICES",
       "version_major": 0,
