Build: Add SPM log support for platforms
As SPM log functions have implemented, add SPM log support for
all the platforms. Set default TFM_SPM_LOG_LEVEL equal to
TFM_SPM_LOG_LEVEL_INFO.

Change-Id: I4111a9ac3840497a70302bbddb19605f8feafe08
Signed-off-by: Shawn Shan <Shawn.Shan@arm.com>

--- a/secure_fw/spm/CMakeLists.txt
+++ b/secure_fw/spm/CMakeLists.txt
@@ -34,6 +34,7 @@ target_sources(tfm_spm
         $<$<BOOL:${TFM_PARTITION_INITIAL_ATTESTATION}>:common/tfm_boot_data.c>
         common/tfm_core_utils.c
         common/utilities.c
+        common/spm_log.c
         $<$<BOOL:${TFM_MULTI_CORE_TOPOLOGY}>:cmsis_psa/tfm_multi_core.c>
         $<$<BOOL:${TFM_MULTI_CORE_TOPOLOGY}>:cmsis_psa/tfm_multi_core_mem_check.c>
         $<$<BOOL:${TFM_MULTI_CORE_TOPOLOGY}>:cmsis_psa/tfm_rpc.c>
