Build: Change NS log from interface to test log system
The NS binary in tf-m-tests repo should use its own log
implementations.
This part is missed on the new build system.

This patch fixes this by:
1. Add the tfm NS library into build (the library CMake is added
   by the test repo)
2. Remove the build of log under interface for NS API

Change-Id: Ib25758950700e819863d278f4a97dcae70bedaa1
Signed-off-by: Kevin Peng <kevin.peng@arm.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,6 +85,7 @@ add_subdirectory(docs)
 if(NS)
     # Set to ${TFM_TEST_REPO_PATH}/app by default
     add_subdirectory(${TFM_APP_PATH} ${CMAKE_CURRENT_BINARY_DIR}/app)
+    add_subdirectory(${TFM_NS_LOG_PATH} ${CMAKE_CURRENT_BINARY_DIR}/ns_log)
 endif()
 add_subdirectory(secure_fw)
 add_subdirectory(interface)
