--- a/lib/ext/mbedcrypto/CMakeLists.txt
+++ b/lib/ext/mbedcrypto/CMakeLists.txt
@@ -20,7 +20,7 @@ if ("${MBEDCRYPTO_PATH}" STREQUAL "DOWNLOAD")
     if (PATCH_FILES)
         FetchContent_Declare(mbedcrypto
             GIT_REPOSITORY https://github.com/ARMmbed/mbedtls.git
-            GIT_TAG mbedtls-${MBEDCRYPTO_VERSION}
+            GIT_TAG ${MBEDCRYPTO_VERSION}
             GIT_SHALLOW TRUE
             GIT_PROGRESS TRUE
             GIT_SUBMODULES ""
@@ -29,7 +29,7 @@ if ("${MBEDCRYPTO_PATH}" STREQUAL "DOWNLOAD")
     else()
         FetchContent_Declare(mbedcrypto
             GIT_REPOSITORY https://github.com/ARMmbed/mbedtls.git
-            GIT_TAG mbedtls-${MBEDCRYPTO_VERSION}
+            GIT_TAG ${MBEDCRYPTO_VERSION}
             GIT_SHALLOW TRUE
             GIT_PROGRESS TRUE
             GIT_SUBMODULES ""
