Build: Fix issue for platform that doesn't build BL2
Problem: CMake Error on the platform that doesn't build BL2
----
CMake Error at platform/ext/accelerator/CMakeLists.txt:27 (target_link_libraries):
  Cannot specify link libraries for target "platform_bl2" which is not built
  by this project.
----

Solution: Move BL2 related stuff into BL2 block

Change-Id: Ifce5becde20a1c99f5369c3ae7d4357ee83bd406
Signed-off-by: Alamy Liu <alamy.liu@infineon.com>

--- a/platform/ext/accelerator/CMakeLists.txt
+++ b/platform/ext/accelerator/CMakeLists.txt
@@ -7,27 +7,31 @@
 
 cmake_policy(SET CMP0079 NEW)
 
-add_library(crypto_hw_bl2 STATIC)
+if(BL2)
+    add_library(crypto_hw_bl2 STATIC)
+endif()
 add_library(crypto_hw_crypto_service STATIC)
 
 add_subdirectory(${CRYPTO_HW_ACCELERATOR_TYPE})
 
 ################################ BL2 ###########################################
 
-target_include_directories(crypto_hw_bl2
-    PUBLIC
-        interface
-)
+if(BL2)
+    target_include_directories(crypto_hw_bl2
+        PUBLIC
+            interface
+    )
 
-target_compile_definitions(crypto_hw_bl2
-    PUBLIC
-        CRYPTO_HW_ACCELERATOR
-)
+    target_compile_definitions(crypto_hw_bl2
+        PUBLIC
+            CRYPTO_HW_ACCELERATOR
+    )
 
-target_link_libraries(platform_bl2
-    PRIVATE
-        $<$<STREQUAL:${CRYPTO_HW_ACCELERATOR_OTP_STATE},ENABLED>:crypto_hw_bl2>
-)
+    target_link_libraries(platform_bl2
+        PRIVATE
+            $<$<STREQUAL:${CRYPTO_HW_ACCELERATOR_OTP_STATE},ENABLED>:crypto_hw_bl2>
+    )
+endif()
 
 ############################ Crypto Service ####################################
 
