Build: Enable code sharing between bootloader and SPE
Add CMake functions to allow sharing regions of code between
independently linked binaries.

Signed-off-by: Tamas Ban <tamas.ban@arm.com>
Change-Id: I6a6132d6c1558b242d8da1dedab14f93a852f81a

--- a/bl2/CMakeLists.txt
+++ b/bl2/CMakeLists.txt
@@ -100,3 +100,9 @@ target_link_libraries(bl2_mbedcrypto
     PUBLIC
         bl2_mbedcrypto_config
 )
+
+############################### CODE SHARING ###################################
+
+if (TFM_CODE_SHARING)
+    compiler_create_shared_code(bl2 ${CMAKE_CURRENT_SOURCE_DIR}/src/shared_symbol_template.txt)
+endif()
