--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,12 @@ function(trusted_firmware_build)
   set(VENEERS_FILE ${TFM_BINARY_DIR}/secure_fw/s_veneers.o)
   set(PSA_API_NS_PATH ${TFM_BINARY_DIR}/interface/libpsa_api_ns.a)
 
+  set(BL2_HEX_FILE ${CMAKE_BINARY_DIR}/tfm/bin/bl2.hex)
+  set_property(GLOBAL PROPERTY
+    bl2_PM_HEX_FILE
+    ${BL2_HEX_FILE}
+    )
+
   set(BUILD_BYPRODUCTS
     ${VENEERS_FILE}
     ${PSA_API_NS_PATH}
@@ -86,7 +92,7 @@ function(trusted_firmware_build)
   endif()
 
   include(ExternalProject)
-  
+
   ExternalProject_Add(
     tfm
     SOURCE_DIR ${ZEPHYR_TFM_MODULE_DIR}/trusted-firmware-m
@@ -106,23 +112,38 @@ function(trusted_firmware_build)
     BUILD_BYPRODUCTS ${BUILD_BYPRODUCTS}
   )
 
-  add_library(tfm_api STATIC IMPORTED)
-  set_target_properties(tfm_api PROPERTIES
+  add_library(tfm_api
+    ${ZEPHYR_TFM_MODULE_DIR}/tf-m-tests/app/os_wrapper_cmsis_rtos_v2.c
+  )
+
+  add_library(interface_lib STATIC IMPORTED)
+  set_target_properties(interface_lib PROPERTIES
     IMPORTED_LOCATION ${PSA_API_NS_PATH}
   )
+  target_link_libraries(interface_lib INTERFACE tfm_api)
 
   add_library(veneer_lib STATIC IMPORTED)
   set_target_properties(veneer_lib PROPERTIES
     IMPORTED_LOCATION ${VENEERS_FILE}
   )
 
-  add_dependencies(tfm_api tfm)
   file(MAKE_DIRECTORY ${TFM_BINARY_DIR}/generated/interface/include)
-  target_include_directories(tfm_api INTERFACE
+
+  target_include_directories(tfm_api
+    PRIVATE
+    ${ZEPHYR_TFM_MODULE_DIR}/tf-m-tests/CMSIS/RTOS2/Include
+    PUBLIC
     ${ZEPHYR_TFM_MODULE_DIR}/trusted-firmware-m/interface/include
+    INTERFACE
     ${TFM_BINARY_DIR}/generated/interface/include
   )
+  add_dependencies(tfm_api tfm)
 
-  target_link_libraries(tfm_api INTERFACE zephyr_interface veneer_lib)
+  target_link_libraries(tfm_api
+    PUBLIC
+    zephyr_interface
+    interface_lib
+    veneer_lib
+  )
 
 endfunction()
