Isolation L3 for AN521 and Musca-B1
- Add Isolation L3 region configuration for AN521 and Musca-B1.
- Add level3-specific linker script/scatter load files for these
  two platforms. The other platforms do not support L3 and do not
  need specific load files at current stage.
- Implement level3-specific dynamic MPU region switching function
  tfm_hal_mpu_update_partition_boundary() while isolation level3
  is chosen.

Change-Id: Icc50683c8a9b32494b29948d1ebeedcb59c0bcaa
Signed-off-by: Kevin Peng <kevin.peng@arm.com>
Co-authored-by: Mingyang Sun <mingyang.sun@arm.com>

--- a/secure_fw/spm/cmsis_psa/tfm_spm_db_ipc.inc.template
+++ b/secure_fw/spm/cmsis_psa/tfm_spm_db_ipc.inc.template
@@ -62,6 +62,10 @@ REGION_DECLARE(Image$$, ARM_LIB_STACK, $$ZI$$Limit);
     {% endif %}
 REGION_DECLARE(Image$$, {{manifest.manifest.name}}_LINKER, _STACK$$ZI$$Base);
 REGION_DECLARE(Image$$, {{manifest.manifest.name}}_LINKER, _STACK$$ZI$$Limit);
+#if TFM_LVL == 3
+REGION_DECLARE(Image$$, PT_{{manifest.manifest.name}}_PRIVATE, _DATA_START$$Base);
+REGION_DECLARE(Image$$, PT_{{manifest.manifest.name}}_PRIVATE, _DATA_END$$Base);
+#endif
     {% if manifest.attr.conditional %}
 #endif /* {{manifest.attr.conditional}} */
     {% endif %}
@@ -203,6 +207,10 @@ const struct tfm_spm_partition_platform_data_t **platform_data_list_list[] =
 const struct tfm_spm_partition_memory_data_t memory_data_list[] =
 {
     {
+#if TFM_LVL == 3
+        .data_start           = PART_REGION_ADDR(ARM_LIB_STACK, $$ZI$$Base),
+        .data_limit           = PART_REGION_ADDR(ARM_LIB_STACK, $$ZI$$Limit),
+#endif
         .stack_bottom         = PART_REGION_ADDR(ARM_LIB_STACK, $$ZI$$Base),
         .stack_top            = PART_REGION_ADDR(ARM_LIB_STACK, $$ZI$$Limit),
     },
@@ -211,6 +219,10 @@ const struct tfm_spm_partition_memory_data_t memory_data_list[] =
 #ifdef {{manifest.attr.conditional}}
     {% endif %}
     {{'{'}}
+#if TFM_LVL == 3
+        .data_start           = PART_REGION_ADDR(PT_{{manifest.manifest.name}}_PRIVATE, _DATA_START$$Base),
+        .data_limit           = PART_REGION_ADDR(PT_{{manifest.manifest.name}}_PRIVATE, _DATA_END$$Base),
+#endif
         .stack_bottom         = PART_REGION_ADDR({{manifest.manifest.name}}_LINKER, _STACK$$ZI$$Base),
         .stack_top            = PART_REGION_ADDR({{manifest.manifest.name}}_LINKER, _STACK$$ZI$$Limit),
     {{'},'}}
