mcuboot: Add workaround to not fetch submodules
CMP0097 doesn't work on 3.16 and 3.17.
https://gitlab.kitware.com/cmake/cmake/-/issues/20579

Add a workaround (request non-existant submodule).
This prevents fetching almost 200 MB of data, improving
pristine build times.

Signed-off-by: Øyvind Rønningstad <oyvind.ronningstad@nordicsemi.no>

--- a/trusted-firmware-m/lib/ext/mcuboot/CMakeLists.txt
+++ b/trusted-firmware-m/lib/ext/mcuboot/CMakeLists.txt
@@ -19,7 +19,8 @@ if ("${MCUBOOT_PATH}" STREQUAL "DOWNLOAD")
         GIT_TAG ${MCUBOOT_VERSION}
         GIT_SHALLOW FALSE
         GIT_PROGRESS TRUE
-        GIT_SUBMODULES ""
+        GIT_SUBMODULES "docs" # Workaround for https://gitlab.kitware.com/cmake/cmake/-/issues/20579
+                             # in cmake 3.17 and below.
     )
     # ToDo: set GIT_SHALLOW to 'TRUE' when MCUBOOT_VERSION will be set to a tag
     # (instead of a commit hash) with the new release.
