Build: Add audit logging defs target
Allows the audit logging tests to pick up audit logging definitions
without having to link to the audit logging partitions (and hence the
entire spm)

Change-Id: I9fd7ab7a0daf5dc371dedbcc7b9bf9bc10c72c6b
Signed-off-by: Raef Coles <raef.coles@arm.com>

--- a/secure_fw/partitions/audit_logging/CMakeLists.txt
+++ b/secure_fw/partitions/audit_logging/CMakeLists.txt
@@ -38,6 +38,15 @@ target_link_libraries(tfm_partition_audit
         psa_interface
 )
 
+########################### Audit defs #########################################
+
+add_library(tfm_audit_logging_defs INTERFACE)
+
+target_include_directories(tfm_audit_logging_defs
+    INTERFACE
+        .
+)
+
 ############################ Secure API ########################################
 
 target_sources(tfm_secure_api
