Build: Add warning about absolute toolchain paths
Note that CMAKE_TOOLCHAIN_FILE no longer accepts relative paths.
Implemented as an error as a relative path will also cause an error.

Change-Id: Ifccaef5b7738c4867031e2d1d5cd37fbf24f7cf6
Signed-off-by: Raef Coles <raef.coles@arm.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,10 @@ if (CMAKE_TOOLCHAIN_FILE)
     unset(CMAKE_TOOLCHAIN_FILE)
 endif()
 
+if (NOT IS_ABSOLUTE ${TFM_TOOLCHAIN_FILE})
+    message(FATAL_ERROR "SETTING CMAKE_TOOLCHAIN_FILE no longer accepts relative paths. Please supply an absolute path or instead use TFM_TOOLCHAIN_FILE (which does accept relative paths)")
+endif()
+
 include(${TFM_TOOLCHAIN_FILE})
 set(CMAKE_PROJECT_INCLUDE_BEFORE ${CMAKE_SOURCE_DIR}/cmake/disable_compiler_detection.cmake)
 
