Build: Fix missing compiler reload for NS
tfm_toolchain_reload_compiler() was missed when doing cmake refactor
from the interface cmakelists. Add it back.

Change-Id: Ia6134afd49cf00b7dfdf66a1928835c17f608924
Signed-off-by: Raef Coles <raef.coles@arm.com>

--- a/interface/CMakeLists.txt
+++ b/interface/CMakeLists.txt
@@ -12,6 +12,7 @@ cmake_policy(SET CMP0079 NEW)
 
 if (TFM_MULTI_CORE_TOPOLOGY)
     include(${CMAKE_SOURCE_DIR}/platform/ext/target/${TFM_PLATFORM}/preload_ns.cmake)
+    tfm_toolchain_reload_compiler()
     # The platform target is created in this directory/file so that it has the
     # same settings as the main ns target.
     add_library(platform_ns STATIC)
