Build: Minor fix in the scatter loader file
'S_CODE_SIZE' represents the maximum size for whole secure code, it
should constrain LR_CODE instead of 'ER_TFM_CODE'.

Change-Id: I977897f6ce52f770050e0e4a099300ff76dbfb2d
Signed-off-by: Ken Liu <Ken.Liu@arm.com>

--- a/platform/ext/common/armclang/tfm_common_s.sct.template
+++ b/platform/ext/common/armclang/tfm_common_s.sct.template
@@ -18,10 +18,10 @@
 
 #include "region_defs.h"
 
-LR_CODE S_CODE_START {
+LR_CODE S_CODE_START S_CODE_SIZE {
 
     /****  This initial section contains common code for secure binary */
-    ER_TFM_CODE S_CODE_START S_CODE_SIZE {
+    ER_TFM_CODE S_CODE_START {
         *.o (RESET +First)
         * (+RO)
     }
