Revert "Boot: Remove IAK from BL2"
This reverts commit d717c34b91f655d90f67a96c24b98d5f989b8261.

Reason for revert: It breaks BL2 build on Musca-B1 with OTP enabled

Change-Id: I305a65a6a0cea6a66a8919466783470bc3b58905
Signed-off-by: David Hu <david.hu@arm.com>

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -117,6 +117,7 @@ if(BL2)
             ext/common/boot_hal.c
             $<$<BOOL:${PLATFORM_DUMMY_NV_COUNTERS}>:ext/common/template/nv_counters.c>
             $<$<BOOL:${PLATFORM_DUMMY_ROTPK}>:ext/common/template/tfm_rotpk.c>
+            $<$<BOOL:${PLATFORM_DUMMY_IAK}>:ext/common/template/tfm_initial_attestation_key_material.c>
     )
 
     target_link_libraries(platform_bl2
