Build: Enable PS NV counter test by default
This patch enables the PS NV counter tests by default.
But there is no effect of it when regression tests are disabled.

Documentation of it is updated as well.

Change-Id: Ibbce9da66f0242135ba71f8b8e9f0225823ca66f
Signed-off-by: Kevin Peng <kevin.peng@arm.com>

--- a/secure_fw/partitions/protected_storage/CMakeLists.txt
+++ b/secure_fw/partitions/protected_storage/CMakeLists.txt
@@ -30,7 +30,9 @@ target_sources(tfm_partition_ps
         ps_utils.c
         $<$<BOOL:${PS_ENCRYPTION}>:crypto/ps_crypto_interface.c>
         $<$<BOOL:${PS_ENCRYPTION}>:ps_encrypted_object.c>
-        $<$<NOT:$<BOOL:${PS_TEST_NV_COUNTERS}>>:nv_counters/ps_nv_counters.c>
+        # The test_ps_nv_counters.c will be used instead, when either NS and S
+        # test is ON and PS_TEST_NV_COUNTERS ON
+        $<$<NOT:$<AND:$<OR:$<BOOL:${TEST_NS}>,$<BOOL:${TEST_S}>>,$<BOOL:${PS_TEST_NV_COUNTERS}>>>:nv_counters/ps_nv_counters.c>
 )
 
 target_link_libraries(tfm_partition_ps
